app/src/interpreter/grammar/.antlr/PseudocodeParser.java
// Generated from i:/Projects/Web Apps/PseudoCode Online Compiler/IGCSE-Pseudocode-Online-Compiler/app/src/interpreter/grammar/Pseudocode.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PseudocodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DECLARE=1, CONSTANT=2, INPUT=3, OUTPUT=4, PRINT=5, IF=6, THEN=7, ELSE=8, 
		ELSEIF=9, ENDIF=10, CASE=11, OF=12, OTHERWISE=13, ENDCASE=14, FOR=15, 
		TO=16, STEP=17, NEXT=18, WHILE=19, DO=20, ENDWHILE=21, REPEAT=22, UNTIL=23, 
		PROCEDURE=24, ENDPROCEDURE=25, FUNCTION=26, ENDFUNCTION=27, RETURNS=28, 
		RETURN=29, CALL=30, ARRAY=31, AND=32, OR=33, NOT=34, TRUE=35, FALSE=36, 
		MOD=37, DIV=38, OPENFILE=39, READFILE=40, WRITEFILE=41, CLOSEFILE=42, 
		READ_MODE=43, WRITE_MODE=44, APPEND_MODE=45, RANDOM=46, SEEK=47, GETRECORD=48, 
		PUTRECORD=49, TYPE=50, ENDTYPE=51, SET=52, DEFINE=53, BYREF=54, BYVAL=55, 
		CLASS=56, ENDCLASS=57, INHERITS=58, PUBLIC=59, PRIVATE=60, NEW=61, SUPER=62, 
		INTEGER_TYPE=63, REAL_TYPE=64, CHAR_TYPE=65, STRING_TYPE=66, BOOLEAN_TYPE=67, 
		DATE_TYPE=68, LARROW=69, EQUALS=70, NOTEQUAL=71, LTE=72, GTE=73, LT=74, 
		GT=75, PLUS=76, MINUS=77, STAR=78, SLASH=79, CARET=80, AMPERSAND=81, LPAREN=82, 
		RPAREN=83, LBRACKET=84, RBRACKET=85, COMMA=86, COLON=87, DOT=88, DATE_LITERAL=89, 
		REAL_LITERAL=90, INTEGER_LITERAL=91, STRING_LITERAL=92, CHAR_LITERAL=93, 
		IDENTIFIER=94, NEWLINE=95, WS=96, LINE_COMMENT=97;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declareStatement = 2, RULE_identifierList = 3, 
		RULE_identifier = 4, RULE_constantStatement = 5, RULE_dataType = 6, RULE_typeDefinition = 7, 
		RULE_defineStatement = 8, RULE_classDeclaration = 9, RULE_classMember = 10, 
		RULE_designator = 11, RULE_designatorPart = 12, RULE_memberName = 13, 
		RULE_assignmentStatement = 14, RULE_singleAssignment = 15, RULE_inputStatement = 16, 
		RULE_outputStatement = 17, RULE_exprList = 18, RULE_ifStatement = 19, 
		RULE_caseStatement = 20, RULE_caseClause = 21, RULE_caseLabel = 22, RULE_forStatement = 23, 
		RULE_whileStatement = 24, RULE_repeatStatement = 25, RULE_procedureDeclaration = 26, 
		RULE_functionDeclaration = 27, RULE_paramList = 28, RULE_param = 29, RULE_callStatement = 30, 
		RULE_methodCall = 31, RULE_methodCallStatement = 32, RULE_returnStatement = 33, 
		RULE_openFileStatement = 34, RULE_readFileStatement = 35, RULE_writeFileStatement = 36, 
		RULE_closeFileStatement = 37, RULE_seekStatement = 38, RULE_getRecordStatement = 39, 
		RULE_putRecordStatement = 40, RULE_fileMode = 41, RULE_argList = 42, RULE_block = 43, 
		RULE_expr = 44, RULE_atom = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "declareStatement", "identifierList", "identifier", 
			"constantStatement", "dataType", "typeDefinition", "defineStatement", 
			"classDeclaration", "classMember", "designator", "designatorPart", "memberName", 
			"assignmentStatement", "singleAssignment", "inputStatement", "outputStatement", 
			"exprList", "ifStatement", "caseStatement", "caseClause", "caseLabel", 
			"forStatement", "whileStatement", "repeatStatement", "procedureDeclaration", 
			"functionDeclaration", "paramList", "param", "callStatement", "methodCall", 
			"methodCallStatement", "returnStatement", "openFileStatement", "readFileStatement", 
			"writeFileStatement", "closeFileStatement", "seekStatement", "getRecordStatement", 
			"putRecordStatement", "fileMode", "argList", "block", "expr", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'='", "'<>'", 
			"'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'^'", "'&'", 
			"'('", "')'", "'['", "']'", "','", "':'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DECLARE", "CONSTANT", "INPUT", "OUTPUT", "PRINT", "IF", "THEN", 
			"ELSE", "ELSEIF", "ENDIF", "CASE", "OF", "OTHERWISE", "ENDCASE", "FOR", 
			"TO", "STEP", "NEXT", "WHILE", "DO", "ENDWHILE", "REPEAT", "UNTIL", "PROCEDURE", 
			"ENDPROCEDURE", "FUNCTION", "ENDFUNCTION", "RETURNS", "RETURN", "CALL", 
			"ARRAY", "AND", "OR", "NOT", "TRUE", "FALSE", "MOD", "DIV", "OPENFILE", 
			"READFILE", "WRITEFILE", "CLOSEFILE", "READ_MODE", "WRITE_MODE", "APPEND_MODE", 
			"RANDOM", "SEEK", "GETRECORD", "PUTRECORD", "TYPE", "ENDTYPE", "SET", 
			"DEFINE", "BYREF", "BYVAL", "CLASS", "ENDCLASS", "INHERITS", "PUBLIC", 
			"PRIVATE", "NEW", "SUPER", "INTEGER_TYPE", "REAL_TYPE", "CHAR_TYPE", 
			"STRING_TYPE", "BOOLEAN_TYPE", "DATE_TYPE", "LARROW", "EQUALS", "NOTEQUAL", 
			"LTE", "GTE", "LT", "GT", "PLUS", "MINUS", "STAR", "SLASH", "CARET", 
			"AMPERSAND", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COMMA", "COLON", 
			"DOT", "DATE_LITERAL", "REAL_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", 
			"CHAR_LITERAL", "IDENTIFIER", "NEWLINE", "WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pseudocode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseudocodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PseudocodeParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(PseudocodeParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PseudocodeParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					match(NEWLINE);
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9076942928257517694L) != 0) || _la==DATE_TYPE || _la==IDENTIFIER) {
				{
				setState(98);
				statement();
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(102);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NEWLINE) {
							{
							{
							setState(99);
							match(NEWLINE);
							}
							}
							setState(104);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(105);
						statement();
						}
						} 
					}
					setState(110);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
			}

			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(113);
				match(NEWLINE);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DeclareStatementContext declareStatement() {
			return getRuleContext(DeclareStatementContext.class,0);
		}
		public ConstantStatementContext constantStatement() {
			return getRuleContext(ConstantStatementContext.class,0);
		}
		public TypeDefinitionContext typeDefinition() {
			return getRuleContext(TypeDefinitionContext.class,0);
		}
		public DefineStatementContext defineStatement() {
			return getRuleContext(DefineStatementContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public InputStatementContext inputStatement() {
			return getRuleContext(InputStatementContext.class,0);
		}
		public OutputStatementContext outputStatement() {
			return getRuleContext(OutputStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public CaseStatementContext caseStatement() {
			return getRuleContext(CaseStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public RepeatStatementContext repeatStatement() {
			return getRuleContext(RepeatStatementContext.class,0);
		}
		public ProcedureDeclarationContext procedureDeclaration() {
			return getRuleContext(ProcedureDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public CallStatementContext callStatement() {
			return getRuleContext(CallStatementContext.class,0);
		}
		public MethodCallStatementContext methodCallStatement() {
			return getRuleContext(MethodCallStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public OpenFileStatementContext openFileStatement() {
			return getRuleContext(OpenFileStatementContext.class,0);
		}
		public ReadFileStatementContext readFileStatement() {
			return getRuleContext(ReadFileStatementContext.class,0);
		}
		public WriteFileStatementContext writeFileStatement() {
			return getRuleContext(WriteFileStatementContext.class,0);
		}
		public CloseFileStatementContext closeFileStatement() {
			return getRuleContext(CloseFileStatementContext.class,0);
		}
		public SeekStatementContext seekStatement() {
			return getRuleContext(SeekStatementContext.class,0);
		}
		public GetRecordStatementContext getRecordStatement() {
			return getRuleContext(GetRecordStatementContext.class,0);
		}
		public PutRecordStatementContext putRecordStatement() {
			return getRuleContext(PutRecordStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				declareStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				constantStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				typeDefinition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				defineStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				classDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(126);
				assignmentStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(127);
				inputStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(128);
				outputStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(129);
				ifStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(130);
				caseStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(131);
				forStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(132);
				whileStatement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(133);
				repeatStatement();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(134);
				procedureDeclaration();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(135);
				functionDeclaration();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(136);
				callStatement();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(137);
				methodCallStatement();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(138);
				returnStatement();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(139);
				openFileStatement();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(140);
				readFileStatement();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(141);
				writeFileStatement();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(142);
				closeFileStatement();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(143);
				seekStatement();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(144);
				getRecordStatement();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(145);
				putRecordStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareStatementContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PseudocodeParser.DECLARE, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public List<TerminalNode> COLON() { return getTokens(PseudocodeParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PseudocodeParser.COLON, i);
		}
		public TerminalNode ARRAY() { return getToken(PseudocodeParser.ARRAY, 0); }
		public TerminalNode LBRACKET() { return getToken(PseudocodeParser.LBRACKET, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RBRACKET() { return getToken(PseudocodeParser.RBRACKET, 0); }
		public TerminalNode OF() { return getToken(PseudocodeParser.OF, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(PseudocodeParser.COMMA, 0); }
		public DeclareStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareStatement; }
	}
